--- a/public/css/components/nav.css
+++ b/public/css/components/nav.css
@@ -3,7 +3,7 @@
     color: var(--text-color-invert);
     padding: var(--gap-m);
     position: relative;
-    border: var(--border-color-dark-mode);
+    border: 3px solid var(--border-color-dark-mode);
 }
 
 .js .nav-body {
@@ -23,7 +23,7 @@
     border-radius: 50%;
     cursor: pointer;
     overflow: hidden;
-    border: var(--border-color-dark-mode);
+    border: 3px solid var(--border-color-dark-mode);
 }
 
 .nav-body[aria-hidden="false"] {
